# sklad

./: .clang-format  .gitignore  README.md
doc/: admin.html  base.odg  sklad4_init.sql
doc/doxygen/: Doxyfile
set/: make.bat  sklad.nsi
src/: CMakeLists.txt  analyzer.cpp  analyzer.h  bom.cpp  bom.h  dialogs.cpp  dialogs.h  dialogs2.cpp  dialogs2.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  misc.cpp  misc.h  mysql_plugin.cpp  mysql_plugin.h  pch.h  price.cpp  price.h  proektform.cpp  proektform.h  sklad.cbp  sklad.pro  sklad.qbs  sklad.qrc  sklad.rc  sqlactions.cpp  sqlactions.h  trebnaklad.cpp  trebnaklad.h  users.cpp  users.h
src/sql/: qsql_mysql.cpp
src/ui/: bomadddialog.ui  bomadddialog2.ui  defichit2.ui  defichit2renamedialog.ui  defichitpricedialog.ui  dootpravka.ui  initdialog.ui  izdelieadd.ui  mainwindow.ui  montagdialog.ui  otpravka.ui  postavshiki.ui  pricedialog.ui  prihodadd.ui  prihodfiltr.ui  proektform.ui  proektformsostavfind.ui  proizvoditeli.ui  rvvod.ui  rvvodadd.ui  sostavadd.ui  trebnaklad.ui  typesdialog.ui  typesitemdialog.ui  users.ui  usersdialog.ui  zakupkiadd.ui  zamenaadd.ui
